--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -25,12 +25,13 @@ p {
     font-size: 16px;
     line-height: 26px;
     font-weight: 500;
+    color: $dark-gray;
 }
 
 img {
     display: block;
-    // width: 100%;
-    height: auto;
+    max-width: 100%;
+    // height: auto;
   }
 
 
