--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,24 +1,29 @@
 /*----------------------------
       layout
  ----------------------------*/
-.page-wrapper { 
-  margin: 23px 24px 50px;
-}
+// .page-wrapper {
+//   // margin: 23px 24px 50px;
+// }
 /*----------------------------
       header section
 ----------------------------*/
 .header {
   display: flex;
   justify-content: space-between;
-  // margin: 23px 24px;
-  height: 40px;
+  margin: 23px 24px;
+  height: 48px;
+
+  &__logo {
+    width: 40px;
+    height: 40px;
+  }
 
   &__preorder-button {
     text-decoration: none;
     color: $dark-blue;
     background-color: $gray;
     border-radius: 8px;
-    padding: 11px 14px;
+    padding: 15px 14px;
     font-size: 16px;
     font-weight: 700;
     // line-height: 26px;
@@ -29,9 +34,13 @@
       main (tm) section 
 ----------------------------*/
 .tm {
-  &__container {
+  &__content-container-one {
     display: flex;
     flex-direction: column;
+  }
+
+  &__info {
+    margin: 0 24px;
   }
 
   &__heading {
@@ -44,21 +53,70 @@
     margin: 0 0 32px;
   }
 
+  &__preorder-container {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+  }
   &__preorder-button {
     background-color: $orange;
     color: $white;
-    margin: 0 32px 0 0;
+    // margin: 0 32px 0 0;
+  }
+
+  &__release-date {
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 700;
   }
 
   &__image-container {
+    // width: 375px ;
     // height: 331px;
-    margin: 64px 0 0;
+    margin: 64px 0 0 24px;
   }
 
   &__keyboard-image {
-    width: 93.6vw;
+    // width: 93.6vw;
+    max-width: 100%;
+    border-radius: 20px;
   }
-  
+
+  &__content-container-two {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__image-container-two {
+    display: grid;
+    grid-template-columns: 35% 65%;
+    gap: 30px;
+    margin: 24px 24px 75px 0;
+  }
+
+  &__keyboard-image-orange {
+    border-radius: 20px;
+    height: 100%;
+  }
+
+  &__keyboard-image-table {
+    border-radius: 20px;
+    height: 100%;
+  }
+
+  &__subheading {
+    font-size: 32px;
+    line-height: 36px;
+    text-align: center;
+    max-width: 255px;
+    margin: 0 auto 24px;
+  }
+
+  &__paragraph--mechanical {
+    max-width: 327px ;
+    margin: 0 auto;
+    text-align: center;
+  }
 }
 /*----------------------------
       footer section 
