Add html and styling to mobile features section

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -22,8 +22,8 @@ h1, h2 ,h3, h4, h5, h6 {
 }
 
 p {
-    font-size: 16px;
-    line-height: 26px;
+    font-size: 4.2666666667vw;
+    line-height: 6.9333333333vw;
     font-weight: 500;
     color: $dark-gray;
 }
