--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -37,25 +37,29 @@
   }
 
   &__preorder-button {
+    display: flex;
+    align-items: center;
     text-decoration: none;
     color: $dark-blue;
     background-color: $gray;
     border-radius: 8px;
-    padding: 15px 3.7333333333vw;
+
+    padding: 0 3.7333333333vw;
+
     font-size: 4.2666666667vw;
     font-weight: 700;
-    transition: 0.3s ease-in;
+    // transition: 0.3s ease-in;
 
     @media only screen and (min-width: $tablet) {
       font-size: 2.0833333333vw;
       line-height: 3.3854166667vw;
-      padding: 2.0833333333vw 3.3854166667vw;
+      padding: 0 3.3854166667vw;
     }
 
     @media only screen and (min-width: $desktop) {
       font-size: 1.1111111111vw;
       line-height: 1.8055555556vw;
-      padding: 1.1111111111vw 1.8055555556vw;
+      padding: 0 1.8055555556vw;
     }
   }
 
