--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,8 +1,4 @@
 /*----------------------------
-      layout
- ----------------------------*/
-
-/*----------------------------
       header section
 ----------------------------*/
 .header {
@@ -17,7 +13,7 @@
   }
 
   @media only screen and (min-width: $desktop) {
-    margin: 3.8194444444vw 11.4583333333vw 5.7638888889vw;
+    margin: 3.438rem 11.4583333333vw 5.188rem;
     height: 4.0277777778vw;
   }
 
@@ -44,11 +40,11 @@
     background-color: $gray;
     border-radius: 8px;
 
-    padding: 0 3.7333333333vw;
+    padding: 4vw 3.7333333333vw;
 
     font-size: 4.2666666667vw;
     font-weight: 700;
-    // transition: 0.3s ease-in;
+    transition: 0.3s color ease-in, 0.3s background-color ease-in;
 
     @media only screen and (min-width: $tablet) {
       font-size: 2.0833333333vw;
@@ -81,7 +77,7 @@
     }
 
     @media only screen and (min-width: $desktop) {
-      grid-template-columns: 45% auto;
+      grid-template-columns: 45% minmax(auto, 40.625rem);
       margin: 0 11.4583333333vw 0;
       gap: 4.8611111111vw;
       position: relative;
@@ -114,8 +110,8 @@
   }
 
   &__heading {
-    font-size: 12.8vw;
-    line-height: 12.8vw;
+    font-size: clamp(3rem, 12.8vw, 4.25rem);
+    line-height: clamp(3rem, 12.8vw, 4.25rem);
     margin: 17.0666666667vw 0 8.5333333333vw;
 
     @media only screen and (min-width: $tablet) {
@@ -196,25 +192,17 @@
     }
   }
 
-  @media only screen and (min-width: $tablet) {
-    &__img {
-      height: 55.3385416667vw;
-      max-width: unset;
-      transform: translateX(3.90625vw);
-    }
-
-    @media only screen and (min-width: $desktop) {
-      &__img {
-        height: 33.3333333333vw;
-        transform: unset;
-      }
-    }
-  }
-
   &__keyboard-image {
     border-radius: 20px 0 0 20px;
 
+    @media only screen and (min-width: $tablet) {
+      max-width: unset;
+      height: 55.339vw;
+    }
+
     @media only screen and (min-width: $desktop) {
+      max-width: 100%;
+      height: unset;
       border-radius: 20px;
     }
   }
@@ -321,7 +309,6 @@
     @media only screen and (min-width: $desktop) {
       font-size: 2.2222222222vw;
       line-height: 2.5vw;
-      margin: 0;
     }
   }
 
